--- a/donations.html
+++ b/donations.html
@@ -431,7 +431,7 @@
     <!-- Hero Section -->
     <div class="hero-section">
         <div class="container">
-            <h1>💚 Support Our Mission</h1>
+            <h1>Support Our Mission</h1>
             <p>Help us protect elephants and promote human-wildlife coexistence in Botswana. Your donation directly funds critical conservation work.</p>
         </div>
     </div>
@@ -445,7 +445,7 @@
                     <div class="card-inner">
                         <div class="card-front">
                             <div class="donation-icon">
-                                <i class="fas fa-heart"></i>
+                                <i class="fas fa-elephant"></i>
                             </div>
                             <div class="donation-title">Adopt an Elephant</div>
                             <div class="donation-description">
@@ -472,7 +472,7 @@
                                 </ul>
                             </div>
                             <button class="btn btn-donate" onclick="event.stopPropagation(); donate('adopt-elephant', 5000)">
-                                Proceed to Payment
+                                Donate
                             </button>
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                                 </ul>
                             </div>
                             <button class="btn btn-donate" onclick="event.stopPropagation(); donate('helicopter', 3000)">
-                                Proceed to Payment
+                                Donate
                             </button>
                         </div>
                     </div>
@@ -549,7 +549,7 @@
                                 </ul>
                             </div>
                             <button class="btn btn-donate" onclick="event.stopPropagation(); donate('gps-collar', 2500)">
-                                Proceed to Payment
+                                Donate
                             </button>
                         </div>
                     </div>
@@ -588,7 +588,7 @@
                                 </ul>
                             </div>
                             <button class="btn btn-donate" onclick="event.stopPropagation(); donate('fixed-wing', 1500)">
-                                Proceed to Payment
+                                Donate
                             </button>
                         </div>
                     </div>
@@ -626,7 +626,7 @@
                                 </ul>
                             </div>
                             <button class="btn btn-donate" onclick="event.stopPropagation(); donate('helicopter-fuel', 800)">
-                                Proceed to Payment
+                                Donate
                             </button>
                         </div>
                     </div>
@@ -665,7 +665,7 @@
                                 </ul>
                             </div>
                             <button class="btn btn-donate" onclick="event.stopPropagation(); donate('plane-fuel', 500)">
-                                Proceed to Payment
+                                Donate
                             </button>
                         </div>
                     </div>
@@ -678,7 +678,7 @@
             <p style="color: #666; font-size: 1.1em; margin-bottom: 20px;">Every donation makes a difference, no matter the size.</p>
             <input type="number" class="form-control custom-amount-input" id="customAmount" placeholder="Enter amount ($)" min="1">
             <button class="btn btn-donate mt-3" style="max-width: 300px;" onclick="donateCustom()">
-                💚 Donate Custom Amount
+                Donate Custom Amount
             </button>
         </div>
 
