--- a/donations.html
+++ b/donations.html
@@ -101,18 +101,19 @@
 
         .popular-banner {
             position: absolute;
-            top: 20px;
-            right: -35px;
+            top: 15px;
+            right: -40px;
             background: linear-gradient(135deg, #ff6b35, #f7931e);
             color: white;
-            padding: 8px 50px;
+            padding: 10px 60px;
             font-weight: bold;
-            font-size: 0.9em;
+            font-size: 0.85em;
             transform: rotate(45deg);
             z-index: 10;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
             text-transform: uppercase;
-            letter-spacing: 1px;
+            letter-spacing: 1.5px;
+            white-space: nowrap;
         }
 
         .card-inner {
@@ -147,6 +148,11 @@
             color: #2c5530;
             margin-bottom: 20px;
             text-align: center;
+        }
+
+        .donation-card.popular .donation-icon {
+            color: #ff6b35;
+            font-size: 6em;
         }
 
         .donation-title {
