--- a/donations.html
+++ b/donations.html
@@ -101,11 +101,11 @@
 
         .popular-banner {
             position: absolute;
-            top: 30px;
-            right: -30px;
+            top: 20px;
+            right: -45px;
             background: linear-gradient(135deg, #ff6b35, #f7931e);
             color: white;
-            padding: 10px 50px;
+            padding: 10px 60px;
             font-weight: bold;
             font-size: 0.75em;
             transform: rotate(45deg);
@@ -114,7 +114,7 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             white-space: nowrap;
-            width: 200px;
+            width: 220px;
             text-align: center;
         }
 
@@ -150,6 +150,12 @@
             color: #2c5530;
             margin-bottom: 20px;
             text-align: center;
+        }
+
+        .donation-icon img {
+            width: 120px;
+            height: 120px;
+            object-fit: contain;
         }
 
         .donation-title {
@@ -476,7 +482,7 @@
                     <div class="card-inner">
                         <div class="card-front">
                             <div class="donation-icon">
-                                <i class="fas fa-paw"></i>
+                                <img src="data/ele.svg" alt="Elephant">
                             </div>
                             <div class="donation-title">Adopt an Elephant</div>
                             <div class="donation-description">
