--- a/donations.html
+++ b/donations.html
@@ -101,11 +101,11 @@
 
         .popular-banner {
             position: absolute;
-            top: 20px;
-            right: -35px;
+            top: 25px;
+            right: -40px;
             background: linear-gradient(135deg, #ff6b35, #f7931e);
             color: white;
-            padding: 10px 60px;
+            padding: 10px 50px 10px 70px;
             font-weight: bold;
             font-size: 0.75em;
             transform: rotate(45deg);
@@ -114,8 +114,6 @@
             text-transform: uppercase;
             letter-spacing: 1px;
             white-space: nowrap;
-            width: 220px;
-            text-align: center;
         }
 
         .card-inner {
@@ -153,9 +151,14 @@
         }
 
         .donation-icon img {
-            width: 150px;
-            height: 150px;
+            width: 100px;
+            height: 100px;
             object-fit: contain;
+        }
+        
+        .donation-card.popular .donation-icon img {
+            width: 100px;
+            height: 100px;
         }
 
         .donation-title {
