--- a/donations.html
+++ b/donations.html
@@ -480,7 +480,7 @@
                     <div class="card-inner">
                         <div class="card-front">
                             <div class="donation-icon">
-                                <img src="data/ele.svg" alt="Elephant">
+                                <img src="data/ele.png" alt="Elephant">
                             </div>
                             <div class="donation-title">Adopt an Elephant</div>
                             <div class="donation-description">
