--- a/donations.html
+++ b/donations.html
@@ -287,7 +287,6 @@
             font-size: 4em;
             color: #2c5530;
             margin-bottom: 15px;
-            font-weight: bold;
             transition: all 0.3s ease;
         }
 
@@ -719,21 +718,27 @@
 
         <!-- Impact Information -->
         <div class="info-section">
-            <h3>🌍 Your Impact</h3>
+            <h3>Your Impact</h3>
             <div class="row">
                 <div class="col-md-4 impact-stat">
-                    <div class="impact-icon"><strong>11</strong></div>
-                    <h5>Elephants Tracked</h5>
+                    <div class="impact-icon">
+                        <i class="fas fa-globe-africa"></i>
+                    </div>
+                    <h5>11 Elephants Tracked</h5>
                     <p>Currently monitoring 11 elephants across Botswana</p>
                 </div>
                 <div class="col-md-4 impact-stat">
-                    <div class="impact-icon"><strong>100K+</strong></div>
-                    <h5>GPS Data Points</h5>
+                    <div class="impact-icon">
+                        <i class="fas fa-map-marked-alt"></i>
+                    </div>
+                    <h5>100K+ GPS Data Points</h5>
                     <p>Over 100,000 location records collected</p>
                 </div>
                 <div class="col-md-4 impact-stat">
-                    <div class="impact-icon"><strong>24/7</strong></div>
-                    <h5>Real-Time Monitoring</h5>
+                    <div class="impact-icon">
+                        <i class="fas fa-satellite"></i>
+                    </div>
+                    <h5>24/7 Real-Time Monitoring</h5>
                     <p>Continuous tracking to prevent human-wildlife conflict</p>
                 </div>
             </div>
