--- a/projects.html
+++ b/projects.html
@@ -167,6 +167,30 @@
             color: white;
         }
 
+        /* Connecting lines for sub-items */
+        .sub-items.left .sub-item {
+            position: relative;
+        }
+
+        .sub-items.left .sub-item::after {
+            content: '';
+            position: absolute;
+            right: -40px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 40px;
+            height: 2px;
+            background: linear-gradient(135deg, #ff6b35, #f7931e);
+            opacity: 0;
+            visibility: hidden;
+            transition: all 0.4s ease;
+        }
+
+        .category-group:hover .sub-items.left .sub-item::after {
+            opacity: 1;
+            visibility: visible;
+        }
+
         .sub-items.left {
             right: 250px;
         }
