--- a/donations.html
+++ b/donations.html
@@ -731,7 +731,7 @@
 
         <!-- Impact Information -->
         <div class="info-section">
-            <h3><i class="fas fa-chart-line"></i> Your Impact</h3>
+            <h3><i class="fas fa-globe-africa"></i> Your Impact</h3>
             <div class="row">
                 <div class="col-md-4 impact-stat">
                     <div class="impact-icon">
