--- a/projects.html
+++ b/projects.html
@@ -76,6 +76,7 @@
             margin: 50px auto;
             max-width: 1000px;
             padding: 50px 20px;
+            position: relative;
         }
 
         .category-group {
@@ -84,6 +85,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            transition: all 0.4s ease;
+        }
+
+        /* Hide categories when another is being hovered */
+        .main-categories:hover .category-group {
+            opacity: 0.3;
+            transform: scale(0.95);
+        }
+
+        .category-group:hover {
+            opacity: 1 !important;
+            transform: scale(1) !important;
         }
 
         .main-category {
@@ -173,14 +186,26 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            transition: all 0.4s ease;
+        }
+
+        /* Hide other sub-items when one is hovered */
+        .sub-items:hover .sub-item-container {
+            opacity: 0.3;
+            transform: scale(0.9);
+        }
+
+        .sub-item-container:hover {
+            opacity: 1 !important;
+            transform: scale(1) !important;
         }
 
         /* Connecting lines for sub-items */
-        .sub-items.left .sub-item {
+        .sub-item-container .sub-item {
             position: relative;
         }
 
-        .sub-items.left .sub-item::after {
+        .sub-items.left .sub-item-container .sub-item::after {
             content: '';
             position: absolute;
             right: -170px;
@@ -194,29 +219,84 @@
             transition: all 0.4s ease;
         }
 
-        .category-group:hover .sub-items.left .sub-item::after {
+        .category-group:hover .sub-items.left .sub-item-container .sub-item::after {
             opacity: 1;
             visibility: visible;
         }
 
-        /* Second-level sub-items */
+        /* Hide connecting lines when sub-item is being hovered */
+        .sub-item-container:hover .sub-item::after {
+            opacity: 0 !important;
+            visibility: hidden !important;
+        }
+
+        /* Ensure sub-sub-items are hidden when category is not hovered */
+        .main-categories:not(:hover) .sub-sub-items,
+        .category-group:not(:hover) .sub-sub-items {
+            opacity: 0 !important;
+            visibility: hidden !important;
+        }
+
+        /* Second-level sub-items - Circular positioning */
         .sub-sub-items {
             position: absolute;
-            left: -250px;
             top: 50%;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
+            left: 50%;
+            transform: translate(-50%, -50%);
             opacity: 0;
             visibility: hidden;
             transition: all 0.4s ease;
             z-index: 4;
+            width: 400px;
+            height: 400px;
         }
 
         .sub-item-container:hover .sub-sub-items {
             opacity: 1;
             visibility: visible;
+        }
+
+        /* Position sub-sub-items in a circle */
+        .sub-sub-items .sub-sub-item:nth-child(1) {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(2) {
+            position: absolute;
+            top: 25%;
+            right: 0;
+            transform: translate(50%, -50%);
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(3) {
+            position: absolute;
+            bottom: 25%;
+            right: 0;
+            transform: translate(50%, 50%);
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(4) {
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translate(-50%, 50%);
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(5) {
+            position: absolute;
+            bottom: 25%;
+            left: 0;
+            transform: translate(-50%, 50%);
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(6) {
+            position: absolute;
+            top: 25%;
+            left: 0;
+            transform: translate(-50%, -50%);
         }
 
         .sub-sub-item {
@@ -255,10 +335,7 @@
         .sub-sub-item::before {
             content: '';
             position: absolute;
-            right: -30px;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 30px;
+            width: 60px;
             height: 2px;
             background: linear-gradient(135deg, #4CAF50, #2E7D32);
             opacity: 0;
@@ -269,6 +346,61 @@
         .sub-item-container:hover .sub-sub-item::before {
             opacity: 1;
             visibility: visible;
+        }
+
+        /* Position connecting lines based on sub-sub-item position */
+        .sub-sub-items .sub-sub-item:nth-child(1)::before {
+            top: 50%;
+            left: 50%;
+            transform: translate(0, -50%);
+            width: 0;
+            height: 60px;
+            transform-origin: center top;
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(2)::before {
+            top: 50%;
+            left: 0;
+            transform: translate(0, -50%) rotate(90deg);
+            transform-origin: right center;
+            width: 60px;
+            height: 2px;
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(3)::before {
+            bottom: 50%;
+            left: 0;
+            transform: translate(0, 50%) rotate(90deg);
+            transform-origin: right center;
+            width: 60px;
+            height: 2px;
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(4)::before {
+            bottom: 0;
+            left: 50%;
+            transform: translate(-50%, 0);
+            width: 0;
+            height: 60px;
+            transform-origin: center bottom;
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(5)::before {
+            bottom: 50%;
+            right: 100%;
+            transform: translate(0, 50%) rotate(-90deg);
+            transform-origin: left center;
+            width: 60px;
+            height: 2px;
+        }
+
+        .sub-sub-items .sub-sub-item:nth-child(6)::before {
+            top: 50%;
+            right: 100%;
+            transform: translate(0, -50%) rotate(-90deg);
+            transform-origin: left center;
+            width: 60px;
+            height: 2px;
         }
 
         .sub-items.left {
@@ -419,6 +551,8 @@
             .sub-sub-items {
                 position: static !important;
                 margin-top: 15px;
+                width: auto !important;
+                height: auto !important;
                 flex-direction: row !important;
                 flex-wrap: wrap;
                 justify-content: center;
@@ -427,14 +561,22 @@
             }
 
             .sub-sub-item {
+                position: static !important;
                 width: 100px;
                 height: 100px;
                 font-size: 0.7em;
                 margin: 5px;
+                transform: none !important;
             }
 
             .sub-sub-item::before {
-                display: none;
+                display: none !important;
+            }
+
+            /* Hide/show behavior still works on mobile */
+            .sub-item-container:hover .sub-sub-items {
+                opacity: 1 !important;
+                visibility: visible !important;
             }
 
             .footer-content {
